added bold and italics

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>Everett can Code!</title>
 </head>
 <body>
-    <h1>Hello world!</h1>
-    <h2>-Everett Handy</h2>
+    <h1>
+        <b>Hello world!</b>
+    </h1>
+        <h2>
+            <i>-Everett Handy</i>
+        </h2>
 </body>
 </html>
