--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
     <title>Everett can Code!</title>
 </head>
 <body>
-    <h1>
-        <b>Hello world!</b>
-    </h1>
+    <h1>Hello world!</h1>
         <h2>
             <i>-Everett Handy</i>
         </h2>
+    <p>I am currently learning to code and working on the following technologies:</p>
+        <ul>
+            <li><b>HTML</b></li>
+            <li><b>CSS</b></li>
+            <li><b>JavaScript</b></li>
+        </ul>
+    <p>Check out my pretty face:</p>
+    <img src="C:\Users\evere\OneDrive\Pictures\EverettHeadShotmain.jpg" alt="A picture of Everett Handy's pretty face" style="width:400px;height400px;">
 </body>
 </html>
